tests/snapshots/snapshot_open_meteo_prefer_codes_test__snapshot_open_meteo_midnight_boundary_prefer_codes.snap
---
source: tests/snapshot_open_meteo_prefer_codes_test.rs
expression: svg
---
<svg width="800" height="480" font-family="Roboto, sans-serif" xmlns="http://www.w3.org/2000/svg">

    <!-- tspan doesn't work well with the degree symbol ° for some fonts!-->
    <!-- Avoid using tspan with text-anchor, `dx` or `dy`, resvg doesn't handle it properly -->
    <!-- see https://github.com/linebender/resvg/issues/583 -->

    <defs>
        <linearGradient id="fillGradient" x1="0%" y1="100%" x2="0%" y2="0%">
            <stop offset="0%" stop-color="blue" stop-opacity="0.5" />
            <stop offset="100%" stop-color="blue" stop-opacity="0.1" />
        </linearGradient>
        <pattern id="dots" patternUnits="userSpaceOnUse" width="10" height="10">
            <circle cx="5" cy="5" r="2" fill="blue" />
        </pattern>
        <pattern id="grid" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 10 0 L 0 0 0 10" fill="none" stroke="blue" stroke-width="1" />
        </pattern>
        <pattern id="diagonal-lines" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 10 L 10 0" stroke="blue" stroke-width="2" />
        </pattern>
        <pattern id="crosshatch" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 0 L 10 10 M 10 0 L 0 10" stroke="blue" stroke-width="1" />
        </pattern>
    </defs>

    <rect width="100%" height="100%" fill="white" />

    <!-- Current Day Information -->
    <!-- Due to resvg bug, the position is intentionally off to compensate for the bug -->
    <!-- Do not modify the x position of current_hour_temp and current_hour_feels_like, see above issue at the start of the file -->
    <text x="400" y="50" font-size="35" fill="black" text-anchor="middle">Sunday, 26 October</text>
    <image x="0" y="0" width="200" height="180" href="static/fill-svg-static/partly-cloudy-night-drizzle.svg" />


    <!-- Current temperature and Feels Like temperature -->
    <text x="266" y="128" font-size="70" fill="red" text-anchor="middle">
        17
        <tspan baseline-shift="27" dx="-20" font-size="33">°C</tspan>
    </text>

    <text x="246" y="158" text-anchor="middle" font-size="18" fill="black">
        <tspan>Feels</tspan>
        <tspan dy="15.5" dx="-46.6">Like</tspan>
        <tspan font-family="Roboto-Regular-Dashed" dominant-baseline="middle" font-size="55" fill="green"
            dx="10" dy="-7">
            16
            <tspan baseline-shift="12" dx="-15" font-size="30">°</tspan>
        </tspan>
    </text>

    <!-- Diagnostic Message -->
    <svg x="580" y="0" width="200" height="100" text-anchor="middle" visibility="visible">
        <!-- Cascading diagnostic icons (stacked by priority) -->
        <image x="63" y="-10" width="74" height="74" href="static/fill-svg-static/code-yellow.svg"/>
        <!-- Message for highest priority error only -->
        <text x="100" y="60" width="200" font-size="12">
            Incomplete Data
        </text>
    </svg>

    <!-- Version Information (displayed when debugging enabled) -->
    <svg x="700" y="0" font-size="10" text-anchor="end" visibility="hidden">
        <text x="90" y="15" fill="black">
            
        </text>
        <text x="90" y="25" fill="black">
            
        </text>
        <text x="90" y="35" fill="black">
             
        </text>
    </svg>

    <!-- Sunset/Sunrise Information -->
    <svg x="30" y="150">
        <image x="0" y="0" width="75" height="75" href="static/fill-svg-static/sunrise.svg" />
        <text x="12" y="70" text-anchor="start" font-size="20" fill="black">06:20</text>

        <image x="70" y="0" width="75" height="75" href="static/fill-svg-static/sunset.svg" />
        <text x="83" y="70" text-anchor="start" font-size="20" fill="black">19:48</text>
    </svg>

    <g transform="translate(-15, 0)">

        <!-- vertical lines with artistic variations -->
        <svg class="line">
            <path d="M95 240 C90 220, 95 320, 95 470" />
            <path d="M150 240 C155 220, 145 320, 150 470" />

            <!-- horizontal lines with artistic variations -->
            <path d="M40 260 C150 261, 250 258, 185 260" />
            <path d="M40 330 C150 325, 250 335, 185 330" />
            <path d="M40 400 C150 402, 250 399, 185 400" />
        </svg>

        <!-- row header-->
        <svg x="15" y="210" label="UV-index" text-anchor="start">
            <text x="16" y="43.5" fill="black" font-size="20">Metric
            </text>

            <text x="85" y="43.5" fill="black" font-size="20">Now
            </text>
            <text x="140" y="43.5" fill="black" font-size="20">Max
                <tspan baseline-shift="super" font-size="17" dx="-3">24h</tspan>
            </text>
        </svg>

        <!-- UV Index -->
        <svg x="20" y="260" label="UV-index" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/uv-index-low.svg" />
            <text x="100" y="45.5" font-size="30" fill="black">1
            </text>
            <text x="155" y="45.5" font-size="30" fill="black"
                font-style="normal">5
            </text>
        </svg>

        <!-- Wind Information -->
        <svg x="20" y="330" label="wind" text-anchor="middle">
            <text x="42.2" y="66.2" fill="black" font-size="15.1" text-anchor="middle">
                km/h
            </text>
            <image width="75" height="75" href="static/fill-svg-static/wind.svg" />
            <text x="100" y="45.5" font-size="30" fill="black">15
            </text>
            <text x="155" y="45.5" font-size="30" fill="black"
                font-style="italic">26
            </text>
        </svg>

        <!-- Relative Humidity -->
        <svg x="20" y="400" label="relative_humidity" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/humidity-plus-plus.svg" />
            <text x="100" y="45.5" font-size="30" fill="black">78
            </text>
            <text x="155" y="45.5" font-size="30" fill="black"
                font-style="italic">90
            </text>
        </svg>
    </g>


    <!-- Forecast for the next 6 days -->
    <svg x="292" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Mon</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/overcast-day-drizzle.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">13°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">6°</tspan>
        </text>
    </svg>

    <svg x="373" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Tue</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">17°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">8°</tspan>
        </text>
    </svg>

    <svg x="454" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Wed</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/overcast-day.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">18°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">10°</tspan>
        </text>
    </svg>

    <svg x="535" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Thu</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/overcast-day.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">19°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">8°</tspan>
        </text>
    </svg>

    <svg x="616" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Fri</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/partly-cloudy-day-rain.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">25°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">13°</tspan>
        </text>
    </svg>

    <svg x="697" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Sat</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/not-available.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">NA°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">NA°</tspan>
        </text>
    </svg>

    <!-- Graph for hourly forecast -->
    <svg x="220" y="160" width="560" height="350" viewBox="-50 0 690 300" preserveAspectRatio="xMidYMid meet"
        style="overflow: visible;">
        <path stroke="black" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <!-- X axis Guidelines -->
        <path stroke="black" stroke-linejoin="round" stroke-width="1" d="M 0 300 L 600 300 M 0 300 v -300 m 0 2 v -2 M 100 300 v -300 m 0 2 v -2 M 200 300 v -300 m 0 2 v -2 M 300 300 v -300 m 0 2 v -2 M 400 300 v -300 m 0 2 v -2 M 500 300 v -300 m 0 2 v -2 M 600 300 v -300 m 0 2 v -2" fill="none"
            stroke-dasharray="5,10" />
        <!-- X Labels -->
        <text x="0" y="320" fill="black" font-size="19" text-anchor="middle">11am</text><text x="100" y="320" fill="black" font-size="19" text-anchor="middle">3pm</text><text x="200" y="320" fill="black" font-size="19" text-anchor="middle">7pm</text><text x="300" y="320" fill="black" font-size="19" text-anchor="middle">11pm</text><text x="400" y="320" fill="black" font-size="19" text-anchor="middle">3am</text><text x="500" y="320" fill="black" font-size="19" text-anchor="middle">7am</text><text x="600" y="320" fill="black" font-size="19" text-anchor="middle">11am</text><line x1="325" y1="0" x2="325" y2="300" stroke="black" stroke-width="2" stroke-dasharray="3,3" />
                   <text x="335" y="170" fill="black" font-size="19" font-style="italic"  transform="rotate(-90, 305, 135)" text-anchor="start">Monday</text>
        <!-- Y Labels -->
        <text x="-10" y="300"  fill="black" font-size="35" text-anchor="end" dx="8" dy="4">5°</text><text x="-10" y="240"  fill="black" font-size="19" text-anchor="end" dx="8" dy="4">8.7°</text><text x="-10" y="180"  fill="black" font-size="19" text-anchor="end" dx="8" dy="4">12.2°</text><text x="-10" y="120"  fill="black" font-size="19" text-anchor="end" dx="8" dy="4">15.8°</text><text x="-10" y="60"  fill="black" font-size="19" text-anchor="end" dx="8" dy="4">19.3°</text><text x="-10" y="0"  fill="black" font-size="35" text-anchor="end" dx="8" dy="4">23°</text>
        <!-- Y right Labels -->
        <text x="610" y="300" fill="black"  font-size="19" text-anchor="start" dy="4">0%</text><text x="610" y="240" fill="black"  font-size="19" text-anchor="start" dy="4">20%</text><text x="610" y="180" fill="black"  font-size="19" text-anchor="start" dy="4">40%</text><text x="610" y="120" fill="black"  font-size="19" text-anchor="start" dy="4">60%</text><text x="610" y="60" fill="black"  font-size="19" text-anchor="start" dy="4">80%</text><text x="610" y="0" fill="black"  font-size="19" text-anchor="start" dy="4">100%</text>
        <path stroke="red" stroke-linejoin="round" transform="translate(0, 300) scale(1, -1)"
            d="M 0.0000 199.1477C 34.7826 214.7727, 43.4783 236.0795, 52.1739 248.8636C 60.8696 261.6477, 69.5652 274.4318, 78.2609 282.9545C 86.9565 291.4773, 95.6522 307.9546, 104.3478 300.0000C 113.0435 292.0454, 121.7391 248.2955, 130.4348 235.2273C 139.1304 222.1591, 147.8261 224.1478, 156.5217 221.5909C 165.2174 219.0341, 173.9130 224.7159, 182.6087 219.8864C 191.3043 215.0568, 200.0000 200.5682, 208.6956 192.6137C 217.3913 184.6591, 226.0870 177.8409, 234.7826 172.1591C 243.4783 166.4773, 252.1739 162.5000, 260.8696 158.5228C 269.5652 154.5455, 278.2609 151.4205, 286.9565 148.2955C 295.6521 145.1705, 304.3478 142.0455, 313.0435 139.7727C 321.7391 137.5000, 330.4348 136.6478, 339.1304 134.6591C 347.8261 132.6705, 356.5217 130.3978, 365.2174 127.8409C 373.9131 125.2841, 382.6087 121.5909, 391.3044 119.3182C 400.0000 117.0455, 408.6956 115.6250, 417.3913 114.2046C 426.0869 112.7841, 434.7826 112.7841, 443.4782 110.7955C 452.1739 108.8068, 460.8696 105.6818, 469.5652 102.2727C 478.2609 98.8636, 486.9565 93.1818, 495.6522 90.3409C 504.3478 87.5000, 513.0435 86.3636, 521.7391 85.2273C 530.4348 84.0909, 539.1304 82.1023, 547.8260 83.5227C 556.5217 84.9432, 565.2173 90.3409, 573.9130 93.7500C 582.6086 97.1591, 595.6522 102.2727, 600.0000 103.9773" stroke-width="3.0" fill="none" />
        <path stroke="green" stroke-linejoin="round" stroke-dasharray="5,5"
            transform="translate(0, 300) scale(1, -1)" d="M 0.0000 177.8409C 34.7826 200.0000, 43.4783 225.5682, 52.1739 240.3409C 60.8696 255.1136, 69.5652 269.0341, 78.2609 277.8409C 86.9565 286.6477, 95.6522 303.4091, 104.3478 293.1819C 113.0435 282.9546, 121.7391 232.1023, 130.4348 216.4773C 139.1304 200.8522, 147.8261 200.8523, 156.5217 199.4318C 165.2174 198.0114, 173.9130 211.9318, 182.6087 207.9546C 191.3043 203.9773, 200.0000 186.0796, 208.6956 175.5682C 217.3913 165.0568, 226.0870 151.1364, 234.7826 144.8864C 243.4783 138.6364, 252.1739 141.1932, 260.8696 138.0682C 269.5652 134.9432, 278.2609 129.5455, 286.9565 126.1364C 295.6521 122.7273, 304.3478 120.4546, 313.0435 117.6137C 321.7391 114.7727, 330.4348 113.6364, 339.1304 109.0909C 347.8261 104.5455, 356.5217 97.4432, 365.2174 90.3409C 373.9131 83.2386, 382.6087 70.7386, 391.3044 66.4773C 400.0000 62.2159, 408.6956 66.1932, 417.3913 64.7727C 426.0869 63.3523, 434.7826 63.6364, 443.4782 57.9546C 452.1739 52.2727, 460.8696 36.9318, 469.5652 30.6818C 478.2609 24.4318, 486.9565 24.1477, 495.6522 20.4546C 504.3478 16.7614, 513.0435 11.9318, 521.7391 8.5227C 530.4348 5.1136, 539.1304 0.2841, 547.8260 0.0000C 556.5217 -0.2841, 565.2173 3.6932, 573.9130 6.8182C 582.6086 9.9432, 595.6522 16.7614, 600.0000 18.7500" stroke-width="3.0" fill="none" />
        <path transform="translate(0, 300) scale(1, -1)" d="M 0.0000 135.0000L 26.086956 165L 52.173912 144L 78.260864 144L 104.347824 195L 130.43478 240L 156.52173 264L 182.60869 279L 208.69565 249L 234.78261 210L 260.86957 150L 286.9565 105L 313.04346 105L 339.13043 99L 365.21738 135L 391.30435 120L 417.3913 135L 443.47824 129L 469.56522 99L 495.65216 69L 521.73914 45L 547.82605 39L 573.913 30L 600 9 L 600 0 L 0 0Z" fill="blue"
            fill-opacity="25%" />
        <defs>
            <linearGradient id="UVGradient" gradientUnits="objectBoundingBox" x1="0%" y1="0%" x2="100%" y2="0%">
                <stop offset="0.00%" stop-color="green"/><stop offset="4.35%" stop-color="yellow"/><stop offset="8.70%" stop-color="yellow"/><stop offset="13.04%" stop-color="white"/><stop offset="17.39%" stop-color="yellow"/><stop offset="21.74%" stop-color="green"/><stop offset="26.09%" stop-color="green"/><stop offset="30.43%" stop-color="yellow"/><stop offset="34.78%" stop-color="green"/><stop offset="39.13%" stop-color="white"/><stop offset="43.48%" stop-color="white"/><stop offset="47.83%" stop-color="white"/><stop offset="52.17%" stop-color="white"/><stop offset="56.52%" stop-color="white"/><stop offset="60.87%" stop-color="white"/><stop offset="65.22%" stop-color="white"/><stop offset="69.57%" stop-color="white"/><stop offset="73.91%" stop-color="white"/><stop offset="78.26%" stop-color="white"/><stop offset="82.61%" stop-color="white"/><stop offset="86.96%" stop-color="white"/><stop offset="91.30%" stop-color="white"/><stop offset="95.65%" stop-color="white"/><stop offset="100.00%" stop-color="white"/>
            </linearGradient>
        </defs>
        <rect x="0" y="-14" width="600" height="8" fill="url(#UVGradient)" />
        <path stroke="black" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <path stroke="red" stroke-linejoin="round" stroke-width="2" d="M 0 0 L 0 300 M -5 300 L 5 300 M -5 240 L 5 240 M -5 180 L 5 180 M -5 120 L 5 120 M -5 60 L 5 60 M -5 0 L 5 0" />
        <path stroke="blue" stroke-linejoin="round" stroke-width="3" d="M 600 0 L 600 300 M 595 300 L 605 300 M 595 240 L 605 240 M 595 180 L 605 180 M 595 120 L 605 120 M 595 60 L 605 60 M 595 0 L 605 0"
            fill="none" />
    </svg>
    <!-- These are needed render svg in browser/ide -->
    <style>
        @font-face {
            font-family: 'Roboto';
            src: url('static/fonts/Roboto-Regular.ttf') format('truetype');
        }

        @font-face {
            font-family: 'Roboto-Regular-Dashed';
            src: url('static/fonts/Roboto-Regular-Dashed.ttf') format('truetype');
        }

        .line {
            stroke: black;
            stroke-width: 2;
            stroke-linecap: round;
            stroke-linejoin: round;
        }
    </style>
</svg>
